# EDControlRoom

./: .gitattributes  .gitignore  AGENTS.md  README.md  TODOs.md  bindings_files.py  config.example.toml  control_room.py  pyproject.toml  release-please-config.json  requirements.txt  run_routine.py  scratch_cgevent.py  scratch_cv.py  scratch_market.py  scratch_rebake.py  ship_controls.py  view_bindings.py  watch_journal.py
.github/: pull_request_template.md
.github/workflows/: discord-workflow-failure-notify.yml  promote-dev-to-main.yml  release-please.yml  tests.yml
defaults/: error_messages.toml  tts.toml
docs/: README.md  STATUS.md  bindings-reference.md  iteration-archive.md  manual-journal-routine-testing.md  session-log.md  status-archive.md
docs/design/: 0001-input-and-runtime-portability-notes.md
docs/devlog/: 0001-macos-mvp-kickoff.md
docs/diagnostics/: bindings-reference.md  cli-reference.md
docs/status/: haul.md  (+3 more)
edap/: actions.py  binding_groups.py  binding_lookup.py  binding_names.py  bindings_inventory.py  capture.py  config.py  control_room_state.py  diagnostics.py  multi_leg_haul.py  progress_controls.py  routines.py  ship_controls.py  state.py  status.py  tts.py  version.py
templates/: multi_leg_haul.example.json
tests/: fakes.py  test_actions.py  test_binding_groups.py  test_binding_lookup.py  test_bindings.py  test_bindings_files_cli.py  test_config.py  test_control_room.py  test_control_room_state.py  test_haul_loop.py  test_haul_two_way.py  test_macos_input.py  test_multi_leg_haul.py  test_paths.py  test_progress_controls.py  test_routines.py  test_run_routine_cli.py  test_runtime.py  test_ship_controls.py  test_ship_controls_cli.py  test_state.py  test_status.py  test_tts.py  test_version.py
tools/: check_test_timing.py  report_test_timing.py
(+59 files in other folders)
