[project]
name = "edautopilot"
version = "0.1.0"
description = "Elite Dangerous autopilot experimentation"
requires-python = ">=3.12"
dependencies = [
  "pyobjc-framework-Quartz>=12.1; sys_platform == 'darwin'",
  "rich>=14.0",
  "textual>=0.60.0",
]

[project.optional-dependencies]
dev = [
  "numpy>=1.26",
  "opencv-python>=4.8",
  "pytesseract>=0.3.10",
  "Pillow>=9.0; sys_platform == 'darwin'",
  # Legacy / parked surfaces kept installable for local experiments and archive work.
  "requests~=2.21.0",
  "colorlog~=4.0.2",
  "pystray~=0.14.4",
  "PyAutoGUI~=0.9.42",
  "kthread~=0.2.2",
  "keyboard~=0.13.3",
]

[tool.uv]
package = false
